--- a/packages/nouvelle/scss/list/_variables.scss
+++ b/packages/nouvelle/scss/list/_variables.scss
@@ -23,8 +23,8 @@ $kendo-list-border: $component-border !default;
 $kendo-list-shadow: null !default;
 
 
-$kendo-list-item-padding-x: map-get( $spacing, 2 ) !default;
-$kendo-list-item-padding-y: map-get( $spacing, 1 ) !default;
+$kendo-list-item-padding-x: k-map-get( $spacing, 2 ) !default;
+$kendo-list-item-padding-y: k-map-get( $spacing, 1 ) !default;
 
 $kendo-list-item-bg: null !default;
 $kendo-list-item-text: $component-text !default;
@@ -37,7 +37,7 @@ $kendo-list-item-selected-text: $selected-text !default;
 
 $kendo-list-item-focus-bg: null !default;
 $kendo-list-item-focus-text: null !default;
-$kendo-list-item-focus-shadow: inset 0 0 0 2px rgba(0, 0, 0, .13) !default;
+$kendo-list-item-focus-shadow: inset 0 0 0 2px rgba( black, .13 ) !default;
 
 
 
